@@ -38,6 +38,12 @@ Zope Changes
 
       - Fixed CMFBTreeFolder for CMF 1.5+
 
+      - WebDAV COPY and MOVE did not call '_notifyOfCopyTo' and
+        '_postCopy' hooks like it was done in
+        OFS.CopySupport. Additionally added
+        'manage_changeOwnershipType' to make MOVE behave even closer
+        to OFS.CopySupport.
+
       - Collector #1548: Fix 'httplib' usage in ZPublisher.Client.
 
       - Collector #1808: manage_convertIndexes no longer tries to change the
